Fix webpack hot reload and vue router

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -6,7 +6,7 @@
 @import "global/variables.css";
 
 @import "base/mixins.css";
-@import "base/reset.css";
+/* @import "base/reset.css"; */
 
 @import "global/media.css";
 @import "global/typography.css";
@@ -14,7 +14,7 @@
 /* @import "global/layout.css"; */
 /* @import "global/grid.css"; */
 /* @import "global/button.css"; */
-/* @import "global/misc.css"; */
+@import "global/misc.css";
 /* @import "global/icons.css"; */
 /* @import "global/wysiwyg.css"; */
 /* @import "global/animations.css"; */
