--- a/src/modules/todo-item/todo-item.css
+++ b/src/modules/todo-item/todo-item.css
@@ -13,6 +13,10 @@
 
 .todo__item-checkbox {
   margin-right: 10px;
+
+  & input[type=checkbox] {
+    display: none;
+  }
 }
 
 .todo__item--completed {
