--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -6,19 +6,19 @@
 @import "global/variables.css";
 
 @import "base/mixins.css";
-/* @import "base/reset.css"; */
+@import "base/reset.css";
 
 @import "global/media.css";
 @import "global/typography.css";
 /* @import "global/form.css"; */
-/* @import "global/layout.css"; */
-/* @import "global/grid.css"; */
-/* @import "global/button.css"; */
+@import "global/layout.css";
+@import "global/grid.css";
+@import "global/button.css";
 @import "global/misc.css";
-/* @import "global/icons.css"; */
-/* @import "global/wysiwyg.css"; */
-/* @import "global/animations.css"; */
+@import "global/icons.css";
+@import "global/wysiwyg.css";
+@import "global/animations.css";
 @import "global/colors.css";
-/* @import "global/inputs.css"; */
+@import "global/inputs.css";
 
 @import "../../modules/**/*.css";
